Add my keyring as an existing custom repo

--- a/exampledir/config/abs.conf
+++ b/exampledir/config/abs.conf
@@ -1,8 +1,9 @@
-CONFIGDIR=./
-ROOTDIR=$CONFIGDIR
-LOGDIR=$ROOTDIR/logs
+CONFIGDIR=./config
+PUBDIR=./public
+LOGDIR=./logs
+SRCDIR=./sources
+REPODIR=$PUBDIR/abs
 
-PUBDIR=$ROOTDIR/public
 REPO_NAMES=("example-repo-1" "example-repo-2")
 
 PACKAGELIST=(
@@ -10,4 +11,8 @@ PACKAGELIST=(
     "steam"
     "hyprland-git"
     "kitty-git"
+)
+
+RSYNCMIRRORS=(
+	""
 )
