Added functionality for building AUR pkgs

--- a/exampledir/config/abs.conf
+++ b/exampledir/config/abs.conf
@@ -1,14 +1,15 @@
-CONFIGDIR=./config
-PUBDIR=./public
-LOGDIR=./logs
-SRCDIR=./sources
+ROOTDIR=$(pwd)
+CONFIGDIR=$ROOTDIR/config
+PUBDIR=$ROOTDIR/public
+LOGDIR=$ROOTDIR/logs
+SRCDIR=$ROOTDIR/sources
 REPODIR=$PUBDIR/abs
 
 REPO_NAMES=("example-repo-1" "example-repo-2")
 
+MAKEPKGFLAGS="-crsC --sign --noconfirm --needed --asdeps"
+
 PACKAGELIST=(
-    "hyprland"
-    "steam"
     "hyprland-git"
     "kitty-git"
 )
